# vulkan_project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: assimps.hpp  glms.hpp  mesh.hpp  pipeline_layout.hpp  render.hpp  resources.hpp
include/ext/: buffer.hpp  image.hpp
include/render/: camera.hpp  material.hpp  mesh.hpp  pipelines.hpp
include/rhi/: command.hpp  device.hpp
include/rhi/vk/: vk.hpp
include/vk/: descriptor.hpp  device.hpp  swapchain.hpp  vk.hpp
include/window/: window.hpp
res/shader/: frag0.spv  frag1.spv  frag2.spv  vert0.spv  vert2.spv  vulkan0.frag  vulkan0.vert  vulkan1.frag  vulkan1.vert  vulkan2.frag
src/: CMakeLists.txt  assimps.cpp  main.cpp  mesh.cpp  pipeline_layout.cpp  render.cpp  resources.cpp
src/ext/: buffer.cpp  image.cpp
src/render/: camera.cpp  material.cpp  mesh.cpp  pipelines.cpp
src/rhi/: CMakeLists.txt
src/rhi/vk/: vk_device.cpp
src/vk/: descriptor.cpp  device.cpp  swapchain.cpp  vk.cpp
src/window/: window.cpp
